--- a/scss/common/_indicia-datacomponents.scss
+++ b/scss/common/_indicia-datacomponents.scss
@@ -107,6 +107,9 @@ table.es-data-grid {
       }
     }
   }
+  th, td {
+    word-wrap: break-word;
+  }
   &.fixed-header {
     tbody {
       display:block;
